force-app/main/default/objects/Business_Plan__c/Business_Plan__c.object-meta.xml
<CustomObject>
    <label>Business Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>