force-app/main/default/objects/Business_Plan__c/fields/ADS__c.field-meta.xml
<CustomField>
    <fullName>ADS__c</fullName>
    <formula>( BP_Full_Year_Estimate__c  *(1+  ADS_Growth__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2022 Full Year Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>