force-app/main/default/objects/Business_Plan__c/fields/ADS_Dollar_Growth__c.field-meta.xml
<CustomField>
    <fullName>ADS_Dollar_Growth__c</fullName>
    <formula>( ( BP_Sales_Plan__c  /  BP_Y_BD__c  ) - ( BP_Full_Year_Estimate__c  /  BP_Y_1_BD__c  ))*  BP_Y_BD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2022 Full Year ADS $ Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>