force-app/main/default/objects/Business_Plan__c/fields/AVP__c.field-meta.xml
<CustomField>
    <fullName>AVP__c</fullName>
    <formula>Territory_Account_Name__r.RVP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVP</label>
    <type>Text</type>
</CustomField>