force-app/main/default/objects/Business_Plan__c/fields/AVP_Name__c.field-meta.xml
<CustomField>
    <fullName>AVP_Name__c</fullName>
    <formula>Territory_Account_Name__r.RVP__r.FirstName  + &apos; &apos; +  Territory_Account_Name__r.RVP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVP</label>
    <type>Text</type>
</CustomField>