force-app/main/default/objects/Business_Plan__c/fields/BP_Full_Year_Estimate__c.field-meta.xml
<CustomField>
    <fullName>BP_Full_Year_Estimate__c</fullName>
    <label>2021 Full Year Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>