force-app/main/default/objects/Business_Plan__c/fields/BP_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>BP_Sales_Plan__c</fullName>
    <label>2022 Full Year Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>