force-app/main/default/objects/Business_Plan__c/fields/BP_Sections__c.field-meta.xml
<CustomField>
    <fullName>BP_Sections__c</fullName>
    <label>BP Sections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Summary</fullName>
                <color>#CC66CC</color>
                <label>Sales Summary</label>
            </value>
            <value>
                <fullName>Pricing &amp; Volume/Mix Forecast</fullName>
            </value>
            <value>
                <fullName>Headcount Summary</fullName>
                <color>#FF9900</color>
                <label>Headcount Summary</label>
            </value>
            <value>
                <fullName>Dashboard Links</fullName>
            </value>
            <value>
                <fullName>Executive Summary</fullName>
                <isActive>false</isActive>
                <label>Executive Summary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>