force-app/main/default/objects/Business_Plan__c/fields/BP_Y_1_BD__c.field-meta.xml
<CustomField>
    <fullName>BP_Y_1_BD__c</fullName>
    <label>BP Y-1 BD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>