force-app/main/default/objects/Business_Plan__c/fields/Contracts_by_expiration_date_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Contracts_by_expiration_date_Dashboard__c</fullName>
    <formula>HYPERLINK(&apos;https://tableau.zimmerbiomet.com/#/site/USCommercialSales/views/ExpiringContracts2021_16000846064520/ContractsExpiring?:iid=1&apos;, &apos;Contracts Dashboard&apos;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracts by expiration date Dashboard</label>
    <type>Text</type>
</CustomField>