force-app/main/default/objects/Business_Plan__c/fields/Current_Year_Full_Year_ADS_pt_Growth_Est__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Full_Year_ADS_pt_Growth_Est__c</fullName>
    <formula>((BP_Full_Year_Estimate__c/ BP_Y_1_BD__c ) - (Y_1_full_Year_sales__c/ BP_Y_BD__c ) )/(Y_1_full_Year_sales__c/ BP_Y_BD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2021 Full Year ADS % Growth Est.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>