force-app/main/default/objects/Business_Plan__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <label>Distributor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BONEAFIDE ORTHO(ZERINGUE)</fullName>
            </value>
            <value>
                <fullName>DAVIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>