force-app/main/default/objects/Business_Plan__c/fields/Rebates_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Rebates_Dashboard__c</fullName>
    <formula>HYPERLINK(
IF( CONTAINS($UserRole.Name, &apos;AVP&apos;) 
||  CONTAINS($UserRole.Name,&apos;AM-Executive Sales Management&apos;)
, &apos;https://tableau.zimmerbiomet.com/#/site/USCommercialSales/workbooks/5602/views&apos;,
&apos;https://tableau.zimmerbiomet.com/#/site/USCommercialSales/workbooks/3448/views&apos;), &apos;Rebates Dashboard&apos;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebates Dashboard</label>
    <type>Text</type>
</CustomField>