force-app/main/default/objects/Business_Plan__c/fields/Territory_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Plans</relationshipLabel>
    <relationshipName>Business_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>