force-app/main/default/objects/Business_Plan__c/fields/Total_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Total_Headcount__c</fullName>
    <label>Total Headcount</label>
    <summarizedField>Headcount_Summary__c.This_Year_End_Estimate__c</summarizedField>
    <summaryForeignKey>Headcount_Summary__c.Business_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>