force-app/main/default/objects/Business_Plan__c/fields/Y_1_full_Year_sales__c.field-meta.xml
<CustomField>
    <fullName>Y_1_full_Year_sales__c</fullName>
    <label>Y-1 full Year sales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>