force-app/main/default/objects/Business_Plan__c/validationRules/Headcount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Headcount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Headcount__c = 0 &amp;&amp;ISCHANGED( Status__c ) &amp;&amp; ISPICKVAL(Status__c , &quot;Pending AVP Approval&quot;) &amp;&amp;  !ISNEW()</errorConditionFormula>
    <errorMessage>Please add Headcount Records before submitting for approval</errorMessage>
</ValidationRule>