force-app/main/default/objects/Business_Plan__c/listViews/All_Business_Plans.listView-meta.xml
<ListView>
    <fullName>All_Business_Plans</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Year__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Business Plans</label>
</ListView>