force-app/main/default/objects/Business_Plan__c/listViews/Legacy_Orthopedic_Inc_BP_Business_Plan.listView-meta.xml
<ListView>
    <fullName>Legacy_Orthopedic_Inc_BP_Business_Plan</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <filterScope>Queue</filterScope>
    <label>Legacy Orthopedic, Inc. - BP</label>
    <queue>Legacy_Orthopedic_Inc_BP</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>