force-app/main/default/objects/Business_Plan__c/listViews/ZB_Case_Medical_BP_Business_Plan.listView-meta.xml
<ListView>
    <fullName>ZB_Case_Medical_BP_Business_Plan</fullName>
    <filterScope>Queue</filterScope>
    <label>ZB Case Medical - BP</label>
    <queue>ZB_Case_Medical_BP</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>