force-app/main/default/objects/Business_Plan__c/listViews/ZBWisco_Inc_BP_Business_Plan.listView-meta.xml
<ListView>
    <fullName>ZBWisco_Inc_BP_Business_Plan</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>ZBWisco, Inc. - BP</label>
    <queue>ZBWisco_Inc_BP</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>